--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,8 @@
 {
-  "singleQuote": true
+  "semi": false,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false
 }
