ci: added the installation of nx into preparation stage in the CI job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ prepare:
   image: node:latest
   script:
     - npm install
+    - npm install -g nx
   cache:
     key: ${CI_COMMIT_REF_SLUG}
     paths:
