ci: trying to fix the pipeline, adding npm ci for revalidation and reinstallation for each job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,13 +30,6 @@ prepare:
   script:
     - npm install nx
     - npm install
-  artifacts:
-    paths:
-      - node_modules/
-      - .nx/
-      - nx.json
-      - package.json
-      - package-lock.json
   # cache:
   #     {}
     # key: ${CI_COMMIT_REF_SLUG}
@@ -47,9 +40,8 @@ lint:
   stage: lint
   image: node:latest
   script:
+    - npm ci
     - npx nx run-many --target=lint --verbose=true--all=true
-  dependencies:
-    - prepare
   # cache:
   #   key: ${CI_COMMIT_REF_SLUG}
   #   paths:
