--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ format:
   stage: format
   image: node:latest
   script:
+    - npm ci
     - npx nx format --verbose=true
   # cache:
   #   key: ${CI_COMMIT_REF_SLUG}
@@ -64,6 +65,7 @@ test:
   stage: test
   image: node:latest
   script:
+    - npm ci
     - npx nx run-many --target=test --verbose=true --all=true --passWithNoTests
   # cache:
   #   key: ${CI_COMMIT_REF_SLUG}
@@ -75,6 +77,7 @@ build:
   stage: build
   image: node:latest
   script:
+    - npm ci
     - npx nx run-many --target=build --verbose=true --all=true
   # cache:
   #   key: ${CI_COMMIT_REF_SLUG}
