ci: added caching back into the ci configuration and optimize it

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,12 +17,11 @@ stages:
   - build
   - sast
 
-# cache:
-#   key: ${CI_COMMIT_REF_SLUG}
-#   paths:
-#     - node_modules/
-#     - dist/
-#     - .nx/cache
+cache:
+  key: ${CI_COMMIT_REF_SLUG}
+  paths:
+    - node_modules/
+    - .nx/cache
 
 prepare:
   stage: prepare
@@ -30,11 +29,6 @@ prepare:
   script:
     - npm install nx
     - npm install
-  # cache:
-  #     {}
-    # key: ${CI_COMMIT_REF_SLUG}
-    # paths:
-    #   - node_modules/
 
 lint:
   stage: lint
@@ -42,11 +36,6 @@ lint:
   script:
     - npm ci
     - npx nx run-many --target=lint --verbose=true--all=true
-  # cache:
-  #   key: ${CI_COMMIT_REF_SLUG}
-  #   paths:
-  #     - node_modules/
-  #     - .nx/cache
 
 format:
   stage: format
@@ -54,11 +43,6 @@ format:
   script:
     - npm ci
     - npx nx format --verbose=true
-  # cache:
-  #   key: ${CI_COMMIT_REF_SLUG}
-  #   paths:
-  #     - node_modules/
-  #     - .nx/cache
   allow_failure: true
 
 test:
@@ -67,11 +51,6 @@ test:
   script:
     - npm ci
     - npx nx run-many --target=test --verbose=true --all=true --passWithNoTests
-  # cache:
-  #   key: ${CI_COMMIT_REF_SLUG}
-  #   paths:
-  #     - node_modules/
-  #     - .nx/cache
 
 build:
   stage: build
@@ -79,13 +58,9 @@ build:
   script:
     - npm ci
     - npx nx run-many --target=build --verbose=true --all=true
-  # cache:
-  #   key: ${CI_COMMIT_REF_SLUG}
-  #   paths:
-  #     - node_modules/
-  #     - .nx/cache
 
 sast:
   stage: sast
+  
 include:
   - template: Security/SAST.gitlab-ci.yml
