--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
+    "antd": "^5.16.0",
     "axios": "^1.6.0",
     "express": "^4.18.1",
     "next": "14.0.4",
