--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@prisma/client": "^5.12.0",
     "axios": "^1.6.0",
     "express": "^4.18.1",
     "next": "14.0.4",
@@ -76,6 +77,7 @@
     "lint-staged": "^15.2.2",
     "nx": "18.1.2",
     "prettier": "^2.8.8",
+    "prisma": "^5.12.0",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
