--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "babel-jest": "^29.4.1",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "esbuild": "^0.19.2",
     "eslint": "~8.48.0",
     "eslint-config-next": "14.0.4",
