ci: trying to fix pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,9 @@ default:
     tags:
         - shared-fi
 
+variables:
+    GIT_CLEAN_FLAGS: "-f -e node_modules/ -e .nx/"
+
 stages:
     - prepare
     - lint
@@ -21,39 +24,46 @@ cache:
     paths:
         - node_modules/
         - .nx/cache/
+    policy: push
 
 prepare:
     stage: prepare
     image: node:latest
     script:
+        - npm install nx
         - npm install
+    cache:
+        policy: pull-push
 
 lint:
     stage: lint
     image: node:latest
     script:
-        - npm ci
         - nx run-many --target=lint --verbose=true--all=true
     needs:
         - ["prepare"]
+    cache:
+        policy: pull
 
 test:
     stage: test
     image: node:latest
     script:
-        - npm ci
         - nx run-many --target=test --verbose=true --all=true --passWithNoTests
     needs:
         - ["prepare"]
+    cache:
+        policy: pull
 
 build:
     stage: build
     image: node:latest
     script:
-        - npm ci
         - nx run-many --target=build --verbose=true --all=true
     needs:
         - ["prepare"]
+    cache:
+        policy: pull
 
 sast:
     stage: sast
