--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -5,7 +5,22 @@
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": true,
-        "types": ["vite/client", "vitest"]
+        "types": [
+            "vite/client",
+            "vitest"
+        ],
+        "baseUrl": "./",
+        "paths": {
+            "@/*": [
+                "src/*"
+            ],
+            "@/hooks/*": [
+                "src/hooks/*"
+            ],
+            "@/data/*": [
+                "src/data/*"
+            ]
+        }
     },
     "files": [],
     "include": [],
