--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -5,21 +5,12 @@
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": true,
-        "types": [
-            "vite/client",
-            "vitest"
-        ],
+        "types": ["vite/client", "vitest"],
         "baseUrl": "./",
         "paths": {
-            "@/*": [
-                "src/*"
-            ],
-            "@/hooks/*": [
-                "src/hooks/*"
-            ],
-            "@/data/*": [
-                "src/data/*"
-            ]
+            "@/*": ["src/*"],
+            "@/hooks/*": ["src/hooks/*"],
+            "@/data/*": ["src/data/*"]
         }
     },
     "files": [],
