fix: openapi changed errors

--- a/apps/backend/swagger/openapi.yaml
+++ b/apps/backend/swagger/openapi.yaml
@@ -32,34 +32,33 @@ paths:
         $ref: './routes/configurations.yaml#/configurations'
     /configurations/{userId}:
         $ref: './routes/configurations.yaml#/configurationsUserId'
-    /components:
-        /gpus:
+    /components/gpus:
             $ref: './routes/components/gpus.yaml#/gpus'
-        /gpus/{gpuId}:
+    /components/gpus/{gpuId}:
             $ref: './routes/components/gpus.yaml#/gpusGpuId'
-        /motherboards:
+    /components/motherboards:
             $ref: './routes/components/motherboards.yaml#/motherboards'
-        /motherboards/{motherboardId}:
+    /components/motherboards/{motherboardId}:
             $ref: './routes/components/motherboards.yaml#/motherboardsMotherboardId'
-        /pccases:
+    /components/pccases:
             $ref: './routes/components/pccases.yaml#/pccases'
-        /pccases/{pcCaseId}:
+    /components/pccases/{pcCaseId}:
             $ref: './routes/components/pccases.yaml#/pccasesPcCaseId'
-        /powersupplies:
+    /components/powersupplies:
             $ref: './routes/components/powersupplies.yaml#/powersupplies'
-        /powersupplies/{powersupplyid}:
+    /components/powersupplies/{powersupplyid}:
             $ref: './routes/components/powersupplies.yaml#/powersuppliesPowerSupplyId'
-        /processors:
+    /components/processors:
             $ref: './routes/components/processors.yaml#/processors'
-        /processors/{processorId}:
+    /components/processors/{processorId}:
             $ref: './routes/components/processors.yaml#/processorsProcessorId'
-        /rams:
+    /components/rams:
             $ref: './routes/components/rams.yaml#/rams'
-        /rams/{ramId}:
+    /components/rams/{ramId}:
             $ref: './routes/components/rams.yaml#/ramsRamId'
-        /storages:
+    /components/storages:
             $ref: './routes/components/storages.yaml#/storages'
-        /storages/{storageId}:
+    /components/storages/{storageId}:
             $ref: './routes/components/storages.yaml#/storagesStorageId'
 
 # Funkcionalita by mala byť taká, že na to aby mohol user začať buildiť svoj pc sa musi
