--- a/apps/backend/swagger/routes/configurations.yaml
+++ b/apps/backend/swagger/routes/configurations.yaml
@@ -75,3 +75,49 @@ configurationsUserId:
               $ref: '../components.responses.yaml#/components/responses/ServerSideError'
       security:
           - sessionCookie: []
+partialConfigurations:
+    get:
+      summary: Get all PartialConfigurations for the user based on the sessionCookie.
+      responses:
+          '200':
+              $ref: '../components.responses.yaml#/components/responses/ConfigurationListResponse'
+          '400':
+              $ref: '../components.responses.yaml#/components/responses/BadRequestError'
+          '500':
+              $ref: '../components.responses.yaml#/components/responses/ServerSideError'
+      security:
+      - sessionCookie: [] 
+partialConfigurationsUserId:
+  post:
+      summary: Create a new PC configuration for user.
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          description: ID of the user.
+          schema:
+              type: integer
+              format: int64
+      requestBody:
+          required: true
+          content:
+              application/json:
+                  schema:
+                      $ref: '../components.schemas.yaml#/components/schemas/PartialConfigurationCreateDTO'
+      responses:
+          '200':
+              description: PC configuration created successfully
+              content:
+                  application/json:
+                      schema:
+                          id:
+                              description: The ID of the partial configuration.
+                              type: integer
+                          message:
+                              type: string
+          '400':
+              $ref: '../components.responses.yaml#/components/responses/BadRequestError'
+          '500':
+              $ref: '../components.responses.yaml#/components/responses/ServerSideError'
+      security:
+          - sessionCookie: []
